Fix category title alignment

--- a/src/app/containers/posts/list/list.component.scss
+++ b/src/app/containers/posts/list/list.component.scss
@@ -6,6 +6,7 @@
 
   h1 {
     margin-bottom: 0;
+    text-align: center;
   }
 
   a.new-post {
